--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,50 @@
- body{
-    background-color: red;
- }
+body {
+    margin: 0; 
+    background-color: rgb(188, 227, 231);
+}
+
+#map {
+    width: 100%;
+    height: 100vh;
+}
+
+#container {
+    position: relative;
+}
+
+#barre-container {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    z-index: 1000;
+}
+
+#barreRecherche {
+    flex: 1;
+    padding: 8px;
+    border: none;
+    font-size: 14px;
+    outline: none;
+}
+
+button {
+    background-color: grey;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+button:hover {
+    background-color: #357ae8;
+}
